# eeg-edf-analysis

./: 1 open eyes.edf  2 closed eyes.edf  3 2026.01.24-16.16.21.085.edf  4 2026.01.24-16.18.47.499.edf  5 2026.01.24-16.38.37.757.edf  6 2026.01.24-16.41.01.794.edf  7 2026.01.24-16.53.06.041.edf  8 2026.01.24-17.03.42.427.edf  9 2026.01.24-17.05.59.615.edf  Define79.ipynb  README.md  Second_Seminar.ipynb  Third_Seminar (1).ipynb  compare.ipynb  compareOpened.ipynb  filter.ipynb  main.ipynb  main.py  oleg_eeg_functional_connectivity.ipynb  oleg_eeg_relative_states.ipynb  pyproject.toml  task.md
cleaned_data/: 1 open eyes_clean.edf  2 closed eyes_clean.edf  3 2026.01.24-16.16.21.085_clean.edf  4 2026.01.24-16.18.47.499_clean.edf  5 2026.01.24-16.38.37.757_clean.edf  6 2026.01.24-16.41.01.794_clean.edf  7 2026.01.24-16.53.06.041_clean.edf  8 2026.01.24-17.03.42.427_clean.edf  9 2026.01.24-17.05.59.615_clean.edf  cleaning_summary.csv  cleaning_summary.json
